// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add optional src 1`] = `
Array [
  "[package]",
  "name = \\"testing\\"",
  "version = \\"0.1.0\\"",
  "authors = [\\"Tim Hall <tim.hall.engr@gmail.com>\\"]",
  "publish = true",
  "",
  "[src]",
  "a = \\"src/a.bas\\"",
  "b = { path = \\"src/b.cls\\", optional = true }",
  "",
  "[src.c]",
  "path = \\"src/c.bas\\"",
  "optional = false",
  "",
  "d = { path = \\"src/d.bas\\", optional = true }",
  "",
  "e = \\"src/e.cls\\"",
  "",
  "[features]",
  "default = [\\"a\\", \\"b\\"]",
  "",
  "a = { src = [\\"b\\"] }",
  "b = { dependencies = [\\"dictionary\\"] }",
  "c = { references = [\\"scripting\\"] }",
  "",
  "[dependencies]",
  "dictionary = { version = \\"1.4.1\\", optional = true }",
  "",
  "[dependencies.web]",
  "git = \\"https://github.com/VBA-tools/VBA-Web\\"",
  "tag = \\"v4.1.3\\"",
  "default-features = false",
  "features = [\\"dictionary-scripting\\"]",
  "",
  "[references.Scripting]",
  "version = \\"1.0\\"",
  "guid = \\"{420B2830-E718-11CF-893D-00A0C9054228}\\"",
  "optional = true",
  "",
  "[[targets]]",
  "type = \\"xlsm\\"",
  "path = \\"targets/xlsm\\"",
  "",
]
`;

exports[`should add src 1`] = `
Array [
  "[package]",
  "name = \\"testing\\"",
  "version = \\"0.1.0\\"",
  "authors = [\\"Tim Hall <tim.hall.engr@gmail.com>\\"]",
  "publish = true",
  "",
  "[src]",
  "a = \\"src/a.bas\\"",
  "b = { path = \\"src/b.cls\\", optional = true }",
  "",
  "[src.c]",
  "path = \\"src/c.bas\\"",
  "optional = false",
  "",
  "d = \\"src/d.bas\\"",
  "",
  "[features]",
  "default = [\\"a\\", \\"b\\"]",
  "",
  "a = { src = [\\"b\\"] }",
  "b = { dependencies = [\\"dictionary\\"] }",
  "c = { references = [\\"scripting\\"] }",
  "",
  "[dependencies]",
  "dictionary = { version = \\"1.4.1\\", optional = true }",
  "",
  "[dependencies.web]",
  "git = \\"https://github.com/VBA-tools/VBA-Web\\"",
  "tag = \\"v4.1.3\\"",
  "default-features = false",
  "features = [\\"dictionary-scripting\\"]",
  "",
  "[references.Scripting]",
  "version = \\"1.0\\"",
  "guid = \\"{420B2830-E718-11CF-893D-00A0C9054228}\\"",
  "optional = true",
  "",
  "[[targets]]",
  "type = \\"xlsm\\"",
  "path = \\"targets/xlsm\\"",
  "",
]
`;

exports[`should add src to empty manifest 1`] = `
Array [
  "[package]",
  "name = \\"empty\\"",
  "version = \\"0.0.0\\"",
  "authors = []",
  "",
  "[src]",
  "",
  "d = \\"src/d.bas\\"",
  "",
]
`;

exports[`should remove inline src 1`] = `
Array [
  "[package]",
  "name = \\"testing\\"",
  "version = \\"0.1.0\\"",
  "authors = [\\"Tim Hall <tim.hall.engr@gmail.com>\\"]",
  "publish = true",
  "",
  "[src]",
  "a = \\"src/a.bas\\"",
  "",
  "[src.c]",
  "path = \\"src/c.bas\\"",
  "optional = false",
  "",
  "[features]",
  "default = [\\"a\\", \\"b\\"]",
  "",
  "a = { src = [\\"b\\"] }",
  "b = { dependencies = [\\"dictionary\\"] }",
  "c = { references = [\\"scripting\\"] }",
  "",
  "[dependencies]",
  "dictionary = { version = \\"1.4.1\\", optional = true }",
  "",
  "[dependencies.web]",
  "git = \\"https://github.com/VBA-tools/VBA-Web\\"",
  "tag = \\"v4.1.3\\"",
  "default-features = false",
  "features = [\\"dictionary-scripting\\"]",
  "",
  "[references.Scripting]",
  "version = \\"1.0\\"",
  "guid = \\"{420B2830-E718-11CF-893D-00A0C9054228}\\"",
  "optional = true",
  "",
  "[[targets]]",
  "type = \\"xlsm\\"",
  "path = \\"targets/xlsm\\"",
  "",
]
`;

exports[`should remove table src 1`] = `
Array [
  "[package]",
  "name = \\"testing\\"",
  "version = \\"0.1.0\\"",
  "authors = [\\"Tim Hall <tim.hall.engr@gmail.com>\\"]",
  "publish = true",
  "",
  "[src]",
  "a = \\"src/a.bas\\"",
  "b = { path = \\"src/b.cls\\", optional = true }",
  "",
  "[features]",
  "default = [\\"a\\", \\"b\\"]",
  "",
  "a = { src = [\\"b\\"] }",
  "b = { dependencies = [\\"dictionary\\"] }",
  "c = { references = [\\"scripting\\"] }",
  "",
  "[dependencies]",
  "dictionary = { version = \\"1.4.1\\", optional = true }",
  "",
  "[dependencies.web]",
  "git = \\"https://github.com/VBA-tools/VBA-Web\\"",
  "tag = \\"v4.1.3\\"",
  "default-features = false",
  "features = [\\"dictionary-scripting\\"]",
  "",
  "[references.Scripting]",
  "version = \\"1.0\\"",
  "guid = \\"{420B2830-E718-11CF-893D-00A0C9054228}\\"",
  "optional = true",
  "",
  "[[targets]]",
  "type = \\"xlsm\\"",
  "path = \\"targets/xlsm\\"",
  "",
]
`;
